# ignite

./: README.md
cpp/: CMakeLists.txt  a.cpp  blur.cpp  gray.cpp
